# drone

./: .gitignore  .gitmodules  LICENSE  README.md  drone-v1.pt  drone.py  drone_rotated.py  drone_vis.py  interactive.py  interface.py  main.py  ppo.py  puffer.py  pyproject.toml  room_mesher.py  setup.py  test.sh  train.sh
.github/: CODEOWNERS
config/: drone.ini
drone/: env.py  ppo.py
drone_cont/: env.py  ppo.py
drone_race/: binding.c  drone_race.h  drone_race.py  dronelib.h
drone_swarm/: drone_swarm.h  dronelib.h
simulator/: cy_env.c  cy_env.pyx  demo.py  env.h  env.py  lstm_ppo.py  policy.py  ppo.py  vis_env.py
simulator/config/: drone.ini
